class MaletaViaje extends Producto {
    public MaletaViaje(String codigo, String descripcion, String ubicacion, int stock, double precio) {
        super(codigo, descripcion, ubicacion, stock, precio);
    }
}
