
class PersonalLimpieza extends Empleado {
    public PersonalLimpieza(String nombre, String id) {
        super(nombre, id, "Limpieza");
    }
}
